[gd_scene load_steps=7 format=3 uid="uid://cdo1fva7ejt37"]

[ext_resource type="Texture2D" uid="uid://cdp8jcjrt620q" path="res://game/world/assets/king_goose.png" id="1_msgcm"]
[ext_resource type="Script" path="res://game/world/king_goose.gd" id="1_rvtqn"]

[sub_resource type="Animation" id="Animation_6s7wp"]
resource_name = "walk"
length = 0.3
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_afy1q"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_85f0m"]
resource_name = "run"
length = 0.2
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [3, 4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ls844"]
_data = {
"RESET": SubResource("Animation_afy1q"),
"run": SubResource("Animation_85f0m"),
"walk": SubResource("Animation_6s7wp")
}

[node name="KingGoose" type="CharacterBody2D"]
script = ExtResource("1_rvtqn")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(5, 5)
texture = ExtResource("1_msgcm")
hframes = 5

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
position = Vector2(0, -2)
polygon = PackedVector2Array(28, -19, 5, 24, 2, 39, -33, 39, -33, -14, -4, -14, 23, -43, 48, -34, 44, -20)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ls844")
}

[node name="LeftFloorRayCast2D" type="RayCast2D" parent="."]
position = Vector2(-24, 0)
target_position = Vector2(0, 42)

[node name="RightFloorRayCast2D" type="RayCast2D" parent="."]
position = Vector2(-2, 0)
target_position = Vector2(0, 42)
